--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+<title>目前服务器下的所有网站（包括唱跳rap篮球论坛）均无法访问</title>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
- <p>抱歉，服务器目前出现了问题暂时无法访问（此网页目前托管在一个静态页面上</p>
+ <p>抱歉，服务器目前出现了问题暂时无法访问（此网页目前托管在一个静态页面上）</p>
  </html>
