--- a/index.html
+++ b/index.html
@@ -2,4 +2,6 @@
 <title>目前服务器下的所有网站（包括唱跳rap篮球论坛）均无法访问</title>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
  <p>抱歉，服务器目前出现了问题暂时无法访问（此网页目前托管在一个静态页面上）</p>
+<p>已通知展示次数:</p>
+<img src="https://badges.toozhao.com/badges/01GTS8V54FR21SRF7GCNN4B6PW/orange.svg" />
  </html>
